tests/test-dirs/upstream-typing-recovery/original-tests/expr_not_a_record_type.compilers.reference
File "expr_not_a_record_type.ml", line 1:
Error: Multiple errors were encountered
File "expr_not_a_record_type.ml", line 11, characters 17-18:
11 | let f (r: int) = r.y <- 3
                      ^
  This expression has type int which is not a record type.
File "expr_not_a_record_type.ml", line 13, characters 10-14:
13 | let _ = { true with contents = 0 }
               ^^^^
  This expression has type bool which is not a record type.
File "expr_not_a_record_type.ml", line 15, characters 17-19:
15 | let t : string = 10
                      ^^
  The constant 10 has type int but an expression was expected of type string
